<resources>
    <string name="app_name">Desarrollo</string>

    <!-- Strings related to login with password -->
    <string name="prompt_alias">Alias</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_alias">Este alias es incorrecto</string>
    <string name="error_invalid_user">Este usuario es incorrecto</string>
    <string name="error_inactive_user">Este usuario se encuentra desactivado</string>
    <string name="error_invalid_password">Esta contraseña no es válida</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="error_internet_connection">No hay conexión a internet</string>
    <string name="error_json_response">Ha habido algún problema en la comunicación</string>
    <string name="error_unknown">Error desconocido</string>


    <!-- Strings related to login with token -->
    <string name="error_pass_changed">Se ha cambiado su contraseña, vuelva a iniciar sesión</string>
    <string name="error_user_disabled">Se ha deshabilitado su usuario</string>
    <string name="error_unexpected">Ha habido algún problema inesperado, vuelva a iniciar sesión</string>
    <string name="error_user_or_password">Usuario o contraseña incorrectas</string>


    <!-- Strings related to logout -->
    <string name="logout_title">¿Cerrar sesión?</string>
    <string name="logout_message">Dejarás de recibir notificaciones</string>


    <!-- Strings related to webview -->
    <string name="fileChooser">Selecciona una acción</string>


    <!-- URL's -->
    <string name="URL_ERROR">file:///android_asset/error.html</string>
    <string name="ERR_CACHE_MISS">net::ERR_CACHE_MISS</string>

    <string name="URL_LOGIN">https://app.dicloud.es/login.asp</string>
    <string name="URL_SYNC_MENU">https://app.dicloud.es/getMenu.asp</string>
    <string name="URL_SYNC_MESSAGES">https://app.dicloud.es/getPendingMessages.asp</string>
    <string name="URL_LOGO">https://app.dicloud.es/getLogo.asp</string>

    <string name="URL_INDEX">https://puertos.dicloud.es/index.asp</string>
    <string name="URL_CHAT">https://puertos.dicloud.es/news/chat.asp</string>
    <string name="URL_ROOT">https://puertos.dicloud.es/</string>
    <string name="URL_LOGOS_ROOT">https://puertos.dicloud.es/files/logos/</string>


    <!-- *** TODO PRUEBAS *** -->

    <!-- URL's SERVER ADMIN.LOCAL -->

    <!--<string name="URL_LOGIN">http://admin.local/app/login.asp</string>-->
    <!--<string name="URL_INDEX">http://admin.local/index.asp</string>-->
    <!--<string name="URL_SYNC_MENU">http://admin.local/app/getMenu.asp</string>-->
    <!--<string name="URL_SYNC_MESSAGES">http://admin.local/app/getPendingMessages.asp</string>-->
    <!--<string name="URL_CHAT">http://admin.local/news/chat.asp</string>-->
    <!--<string name="URL_ROOT">http://admin.local/</string>-->

     URL's LOCALHOST
    <!--<string name="URL_LOGIN">http://10.0.2.2/app/login.asp</string>-->
    <!--<string name="URL_INDEX">http://10.0.2.2/index.asp</string>-->
    <!--<string name="URL_SYNC_MENU">http://10.0.2.2/app/getMenu.asp</string>-->
    <!--<string name="URL_SYNC_MESSAGES">http://10.0.2.2/app/getPendingMessages.asp</string>-->
    <!--<string name="URL_CHAT">http://10.0.2.2/news/chat.asp</string>-->
    <!--<string name="URL_ROOT">http://10.0.2.2/</string>-->

    <!-- URL's CASA -->
    <!--<string name="URL_LOGIN">http://192.168.137.1/app/login.asp</string>-->
    <!--&lt;!&ndash;<string name="URL_INDEX">http://192.168.137.1/a/index.asp</string>&ndash;&gt;-->
    <!--<string name="URL_INDEX">http://192.168.137.1/index.asp</string>-->
    <!--<string name="URL_SYNC_MENU">http://192.168.137.1/app/getMenu.asp</string>-->
    <!--<string name="URL_SYNC_MESSAGES">http://192.168.137.1/app/getPendingMessages.asp</string>-->
    <!--<string name="URL_CHAT">http://192.168.137.1/news/chat.asp</string>-->
    <!--<string name="URL_ROOT">http://192.168.137.1/</string>-->
    <!-- *** TODO PRUEBAS *** -->

    <!-- Strings related to databases -->
    <string name="DB_main">dicloud.db</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dicloud</string>
    <string name="nav_header_subtitle">Dani</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_disconect">Desconectar</string>
    <string name="menu_manage">Configuración</string>
    <string name="menu_home">Página principal</string>


    <!--Notifications-->
    <string name="channel_name">Nuevos mensajes</string>
    <string name="channel_ID">es.disoft.dicloud</string>

    <!--Singular-->
    <string name="new_message">mensaje nuevo</string>
    <string name="new_message_from">mensaje nuevo de</string>
    <string name="new_chat">chat nuevo</string>

    <!--Plural-->
    <string name="new_messages">mensajes nuevos</string>
    <string name="new_messages_from">mensajes nuevos de</string>
    <string name="new_chats">chats nuevos</string>


    <string name="iconHomeDescription">Página principal</string>
    <string name="iconRefreshDescription">Actualizar página</string>

    <string name="hackerino">Parece que eres un hackerino, bandido</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_data_sync">Uso de datos</string>

    <string name="pref_title_sync_frequency">Frecuencia de sincronización</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Cada 15 minutos</item>
        <item>Cada 30 minutos</item>
        <item>Cada hora</item>
        <item>Cada 3 horas</item>
        <item>Cada 6 horas</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_notification_led">Led</string>

    <string-array name="pref_notification_led">
        <item>Rojo</item>
        <item>Azul</item>
        <item>Verde</item>
        <item>Amarillo</item>
    </string-array>

    <string-array name="pref_notification_led_values">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Notificaciones de mensajes</string>

    <string name="pref_title_ringtone">Sonido</string>
    <string name="pref_ringtone">content://settings/system/notification_sound</string>
    <string name="pref_ringtone_silent">Silencio</string>

    <string name="pref_title_vibrate">Vibración</string>
    <string name="notification_led">notification_led</string>
    <string name="download_start">Descargando…</string>

</resources>
